# SimpleWebInterface

./: Cargo.toml
src/: app.rs  lib.rs  models.rs  utils.rs
src/components/: chat_area.rs  documents.rs  mod.rs  settings.rs  sidebar.rs
src/services/: document_service.rs  llm.rs  mod.rs  storage.rs
