[package]
name = "SimpleWebInterface"
version = "0.1.0"
authors = ["CeeArEx <christian.rute@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# FIX 1: Added "stream" feature here
reqwest = { version = "0.11", features = ["json", "stream"] }
pulldown-cmark = "0.9"
futures-util = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
# FIX 2: "js" feature required for WASM
uuid = { version = "1.0", features = ["v4", "js"] }
js-sys = "0.3"
anyhow = "1.0.100"
console_error_panic_hook = "0.1.7"
tiktoken-rs = "0.6"
glob = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlSelectElement",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "Window",
    "Storage",
    "MouseEvent",
    "KeyboardEvent",
    "InputEvent",
    "SubmitEvent",
    "Element",
    "Node",
    "File",
    "FileList",
    "EventTarget",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlSpanElement",
    "DomRect",
    "DomRectReadOnly"
]
